RavenDB-7052 About page, License

--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -99,7 +99,23 @@
   content: "\e9f3";
 }
 .icon-sql-unsupported:before {
-  content: "\e9f4";
+    content: "\e9f4";
+}
+
+.icon-group:before {
+    content: "\e9f6";
+}
+
+.icon-user:before {
+    content: "\e9f7";
+}
+
+.icon-phone:before {
+    content: "\e9f8";
+}
+
+.icon-infinity:before {
+    content: "\e9f5";
 }
 
 .icon-cmp-xchg:before {
@@ -1035,7 +1051,21 @@
     content: "\ea10";
 }
 
+.icon-googleplus:before {
+    content: "\ea8b";
+}
 
+.icon-facebook:before {
+    content: "\ea90";
+}
+
+.icon-twitter:before {
+    content: "\ea96";
+}
+
+.icon-linkedin:before {
+    content: "\eaca";
+}
 
 /* ONLY MENU ICON COLORS */
 #main-menu {
