--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/indexes.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/indexes.html
@@ -8,7 +8,6 @@
             </div>
         </div>
     </div>
-
     <div class="flex-vertical absolute-fill" data-bind="visible: sortedGroups().length">
         <div class="flex-header">
             <div class="clearfix toolbar" data-bind="if: sortedGroups().length">
@@ -110,13 +109,11 @@
             </div>
         </div>
         <div class="flex-grow scroll">
-
             <div data-bind="foreach: sortedGroups">
                 <h2 data-bind="text: entityName, visible: !groupHidden(), attr: { title: 'Collection: ' + entityName }"></h2>
                 <div data-bind="foreach: indexes, visible: !groupHidden()">
                     <div data-bind="css: { 'sidebyside-indexes': replacement }, visible: !filteredOut()">
                         <div class="panel panel-state index" data-bind="template: { name: 'index-template' }, css: { 'has-replacement': replacement }">
-
                         </div>
                         <div class="sidebyside-actions" data-bind="with: replacement, visible: replacement">
                             <div class="panel panel-state panel-warning">
@@ -356,8 +353,7 @@
                 </div>
             </div>
         </div>
-
-        <div data-bind="with: progress, visible: !isErrorState()">
+        <div data-bind="with: progress, visible: !isErrorState() && !isFaulty()">
             <hr class="small" />
             <div class="progress-container">
                 <div class="progress-overall">
