RavenDB-10698 When there isn't any connection string defined (in ETL or SQL) set 'create new by default'

--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editExternalReplicationTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editExternalReplicationTask.html
@@ -120,7 +120,7 @@
                                     </div>
                                     <div class="padding bg-info">
                                         <h2>About this error</h2>
-                                        <div>Each RavenDB server has both HTTP and TCP endpoints. While the first one is used for system management and client-server rest request, the second is used for inter-server and advanced clien-server communicaitons.</div>
+                                        <div>Each RavenDB server has both HTTP and TCP endpoints. While the first one is used for system management and client-server rest request, the second is used for inter-server and advanced clien-server communications.</div>
                                         <div>The connection tests the TCP endpoint only after a successful HTTP connection.</div>
                                         <div data-bind="visible: HTTPSuccess">It appears that the current server was able to connect to the desired server through HTTP, but failed connecting to it using TCP.</div>
                                         <div data-bind="visible: !HTTPSuccess">It appears that the current server could not connect to the desired node through HTTP.</div>
